[package]
name = "ant_hive_rust"
version = "0.1.0"
authors = ["Dima N1ght"]
edition = "2018"

[[bin]]
name = "ant_hive_rust"
path = "./main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rand = "0.7.3"